# custom_turtlebot

./: Link to movebase param  rviz_custom.rviz  ubuntu18的依赖.docx  全局导航的配置文件.docx  全局规划穿过uknown的方法.docx  更换和自定义全局规划器的方法.docx  编写global_planner发布potential数量.docx
rplidar_ros/launch/: rplidar.launch
scout_key_controller/: CMakeLists.txt  package.xml
scout_key_controller/launch/: key_controller.launch
scout_key_controller/src/: scout_key_controller_node.cpp
turtlebot/turtlebot_bringup/launch/: minimal_with_rplidar.launch
turtlebot/turtlebot_description/robots/: kobuki_hexagons_asus_xtion_pro.urdf.xacro
turtlebot_apps-indigo/turtlebot_navigation/: movebase问题解决.docx  可视化optential.docx  调整local costmap解决移动过程中卡死的问题 .docx  ？explorelite 最后还是有些边界没有消除  是为什么.docx
turtlebot_apps-indigo/turtlebot_navigation/launch/: gmapping_without_movebase.launch  rplidar_gmapping.launch
turtlebot_apps-indigo/turtlebot_navigation/param/: costmap-common_params配制方法.docx  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  调用当下所有配置文件的文件，Link to move_base.launch.xml
turtlebot_apps-indigo/turtlebot_navigation/param_custom/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
turtlebot_rplidar/config/: gmapping.rviz
turtlebot_rplidar/launch/: turtlebot_rplidar_world.launch
turtlebot_rplidar/urdf/: turtlebot_rplidar_gazebo.urdf.xacro
(+8 files in other folders)
