<?xml version="1.0"?>
<package format="2">
  <name>scout_key_controller</name>
  <version>0.0.0</version>
  <description>The scout_key_controller package</description>
  <maintainer email="qixianyu@buaa.edu.cn">qixianyu</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>

</package>
